test/failing/cycle2.trunnel

struct x {
  struct y z;
}

struct y {
  struct x z;
}
